# oneshot

./: Dockerfile  README.md  aliases.sh  functions.sh  pyproject.toml  yoyo.ini
patterns/devops_code/: system.md.j2
patterns/devops_code_helm/: system.md.j2
patterns/devops_code_js/: system.md.j2
patterns/devops_code_python/: system.md.j2
patterns/devops_document/: system.md.j2
patterns/devops_quick_question/: system.md.j2
patterns/general/: system.md.j2
patterns/templates/: code.j2mac  general.j2mac  markdown.j2mac  python.j2mac  succinct.j2mac
src/oneshot/: ai_utils.py  cli.py  server.py
src/oneshot/ai/: ai_utils.py  anthropic_utils.py  deepseek_utils.py  gemini_utils.py  langchain.py  nvidia_utils.py  openai_utils.py  test_ai_utils.py  xai_utils.py
src/oneshot/collector/: collector.py
src/oneshot/generator/: generator.py
src/oneshot/markdown/: generate_image.py  markdown.py
src/oneshot/pattern/: pattern.py  render.py
src/oneshot/social/: telegram.py
src/oneshot/utils/: dates.py  fileutils.py
