[project]
name = "oneshot"
version = "1.0.0"
description = "Oneshot AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.82.0",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "python-dotenv>=1.2.2",
    "typer>=0.24.0",
    "xai-sdk>=1.7.0",
    "google-genai>=1.68.0",
    "weaviate-client>=4.20.1",
    "tiktoken>=0.12.0",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-anthropic>=1.3.5",
    "langchain-openai>=1.1.11",
    "langchain-xai>=1.2.2",
    "langchain-google-genai>=3.2.2",
    "langchain-deepseek>=1.0.1",
    "gunicorn>=25.1.0",
    "python-dateutil>=2.9.0.post0",
]
